--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "private": true,
   "dependencies": {
     "@angular-eslint/schematics": "^15.2.1",
-    "@angular/animations": "^15.1.0",
-    "@angular/cdk": "^15.1.5",
+    "@angular/animations": "^15.2.4",
+    "@angular/cdk": "angular/cdk-builds",
     "@angular/common": "^15.1.0",
     "@angular/compiler": "^15.1.0",
     "@angular/core": "^15.1.0",
     "@angular/forms": "^15.1.0",
-    "@angular/material": "^15.1.5",
+    "@angular/material": "angular/material2-builds",
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
